Fixed rwd, white space

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -262,6 +262,7 @@ main {
 		text-align: center;
 	}
 	body {
+		height: 100vh;
 		display: flex;
 		justify-content: center;
 		align-items: center;
